--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@tailwindcss/forms": "^0.5.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -16,9 +17,11 @@
         "eslint-plugin-react": "^7.32.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.1",
+        "react-router-dom": "^6.8.1",
         "react-scripts": "5.0.1",
         "tailwindcss": "^3.2.4",
-        "typescript": "^4.4.2",
+        "typescript": "4.9.4",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
