--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^2.9.11",
         "@tailwindcss/forms": "^0.5.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
@@ -11,6 +12,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "axios": "^1.3.3",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -18,11 +20,14 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.1",
+        "react-icons": "^4.7.1",
         "react-router-dom": "^6.8.1",
         "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.1",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
-        "web-vitals": "^2.1.0"
+        "web-vitals": "^2.1.0",
+        "yup": "^1.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
