--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/uuid": "^9.0.0",
         "axios": "^1.3.3",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.27.5",
@@ -26,6 +27,7 @@
         "react-toastify": "^9.1.1",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.0",
         "yup": "^1.0.0"
     },
