--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/react-table": "^7.7.14",
         "@types/uuid": "^9.0.0",
         "axios": "^1.3.3",
         "eslint-config-airbnb": "^19.0.4",
@@ -24,6 +25,7 @@
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.8.1",
         "react-scripts": "5.0.1",
+        "react-table": "^7.8.0",
         "react-toastify": "^9.1.1",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
