--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^1.7.13",
         "@hookform/resolvers": "^2.9.11",
         "@tailwindcss/forms": "^0.5.3",
         "@testing-library/jest-dom": "^5.14.1",
