--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-scripts": "5.0.1",
         "react-table": "^7.8.0",
         "react-toastify": "^9.1.1",
+        "sweetalert2": "^11.7.3",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4",
         "uuid": "^9.0.0",
